# agentic_cyber_security_news

./: .gitignore  README.md
cyber_security_news/: .dockerignore  Dockerfile  cisa_kev_task.md  crewai_flow.html  filter_task.md  known_exploits_cve_results_2025-01-30.json  pyproject.toml  search_task.md  search_tasks.md  summarise_task.md  trend_analysis_task.md  weekly_cyber_security_news_report.md  weekly_news_overview.md  weekly_overview_task.md
cyber_security_news/src/cyber_security_news/: main.py
cyber_security_news/src/cyber_security_news/crews/editor/: editor.py
cyber_security_news/src/cyber_security_news/crews/editor/config/: agents.yaml  tasks.yaml
cyber_security_news/src/cyber_security_news/crews/newsroom_crew/: newsroom_crew.py
cyber_security_news/src/cyber_security_news/crews/newsroom_crew/config/: agents.yaml  tasks.yaml
cyber_security_news/src/cyber_security_news/crews/web_research_crew/: web_research_crew.py
cyber_security_news/src/cyber_security_news/crews/web_research_crew/config/: agents.yaml  tasks.yaml
cyber_security_news/src/cyber_security_news/tools/: crew_cve_tool.py  custom_tool.py  cve_check.py  cve_results_20241227.json  google_search.py  high_cve_results_20241227.json  json_report.py  known_exploits_cve_results_20241227.json  new_exploitable_cve.py
